force-app/main/default/objects/CandidateInNomination__c/CandidateInNomination__c.object-meta.xml
<CustomObject>
    <description>Junction Table for Many-to-Many Candidate-Nomination relations</description>
    <label>CandidateInNomination</label>
    <nameField>
        <label>CandidateInNomination</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CandidatesInNominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>