force-app/main/default/objects/CandidateInNomination__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>CandidatesInNominations</relationshipLabel>
    <relationshipName>CandidatesInNominations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>