force-app/main/default/objects/CandidateInNomination__c/fields/CandidateContact__c.field-meta.xml
<CustomField>
    <fullName>CandidateContact__c</fullName>
    <label>CandidateContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CandidatesInNominations (CandidateContact)</relationshipLabel>
    <relationshipName>CandidatesInNominations1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>