force-app/main/default/objects/CandidateInNomination__c/fields/CopiesOfCandidateInNomination__c.field-meta.xml
<CustomField>
    <fullName>CopiesOfCandidateInNomination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup</description>
    <label>CopiesOfCandidateInNomination</label>
    <referenceTo>CandidateInNomination__c</referenceTo>
    <relationshipLabel>CandidatesInNominations</relationshipLabel>
    <relationshipName>CandidatesInNominations</relationshipName>
    <type>Lookup</type>
</CustomField>