force-app/main/default/objects/CandidateInNomination__c/fields/MasterCopyLink__c.field-meta.xml
<CustomField>
    <fullName>MasterCopyLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup for master copy</description>
    <label>Master Copy Link</label>
    <referenceTo>CandidateInNomination__c</referenceTo>
    <relationshipLabel>CandidatesInNominations</relationshipLabel>
    <relationshipName>CandidatesInNominations</relationshipName>
    <type>Lookup</type>
</CustomField>