force-app/main/default/objects/CandidateInNomination__c/fields/Nomination__c.field-meta.xml
<CustomField>
    <fullName>Nomination__c</fullName>
    <label>Nomination</label>
    <referenceTo>Nomination__c</referenceTo>
    <relationshipLabel>CandidatesInNominations</relationshipLabel>
    <relationshipName>CandidatesInNominations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>