force-app/main/default/objects/CandidateInNomination__c/fields/PushedBy__c.field-meta.xml
<CustomField>
    <fullName>PushedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PushedBy</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CandidatesInNominations</relationshipLabel>
    <relationshipName>CandidatesInNominations</relationshipName>
    <type>Lookup</type>
</CustomField>