force-app/main/default/objects/CandidateInNomination__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for the Candidate to be pushed in a Nomination</description>
    <label>Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>