force-app/main/default/objects/CandidateInNomination__c/fields/ThisIsMasterCopy__c.field-meta.xml
<CustomField>
    <fullName>ThisIsMasterCopy__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if this is the main copy of all similar candidates in this nomination</description>
    <label>This Is Master Copy</label>
    <type>Checkbox</type>
</CustomField>