force-app/main/default/objects/CandidateInNomination__c/fields/VotesTotal__c.field-meta.xml
<CustomField>
    <fullName>VotesTotal__c</fullName>
    <description>Total number of Votes</description>
    <label>VotesTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>