force-app/main/default/objects/CandidateInNomination__c/validationRules/Reason_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_length</fullName>
    <active>true</active>
    <description>We want reasons to be concise, and to-the-point, not abstractions</description>
    <errorConditionFormula>LEN(Reason__c) &lt; 200</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason field must include at least 200 characters</errorMessage>
</ValidationRule>